--- a/frontend-meltt/package.json
+++ b/frontend-meltt/package.json
@@ -26,6 +26,7 @@
     "jwt-decode": "^4.0.0",
     "mobx": "^6.13.3",
     "mobx-react-lite": "^4.0.7",
+    "pdf-lib": "^1.17.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.9",
