--- a/frontend-meltt/package.json
+++ b/frontend-meltt/package.json
@@ -28,6 +28,7 @@
     "mobx-react-lite": "^4.0.7",
     "pdf-lib": "^1.17.1",
     "react": "^18.3.1",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.9",
     "react-hot-toast": "^2.4.1",
