--- a/frontend-meltt/package.json
+++ b/frontend-meltt/package.json
@@ -15,7 +15,7 @@
     "@emotion/styled": "^11.13.0",
     "@mui/lab": "^6.0.0-beta.10",
     "@mui/material": "^6.0.0",
-    "@mui/x-date-pickers": "^7.16.0",
+    "@mui/x-date-pickers": "^7.26.0",
     "@react-pdf/renderer": "^4.0.0",
     "@types/react-input-mask": "^3.0.2",
     "axios": "^1.7.7",
@@ -26,9 +26,11 @@
     "jwt-decode": "^4.0.0",
     "mobx": "^6.13.3",
     "mobx-react-lite": "^4.0.7",
+    "moment": "^2.30.1",
     "pdf-lib": "^1.17.1",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
+    "react-big-calendar": "^1.17.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.9",
     "react-hot-toast": "^2.4.1",
