--- a/backend-meltt/services/academicService/package.json
+++ b/backend-meltt/services/academicService/package.json
@@ -2,10 +2,11 @@
   "name": "academicservice",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "cross-env NODE_ENV=development nodemon src/server.js",
-    "start": "cross-env NODE_ENV=production node src/server.js",
+    "start": "cross-env NODE_ENV=production node server/app.js",
     "dev:local": "cross-env NODE_ENV=development nodemon src/server.js"
   },
   "keywords": [],
@@ -19,7 +20,7 @@
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
-    "canvas": "^2.11.2",
+    "canvas": "^3.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
