--- a/backend-meltt/services/authService/package.json
+++ b/backend-meltt/services/authService/package.json
@@ -2,10 +2,11 @@
   "name": "authservice",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "cross-env NODE_ENV=development nodemon server.js",
-    "start": "cross-env NODE_ENV=production node server.js",
+    "start": "cross-env NODE_ENV=production node server/app.js",
     "build": "cross-env NODE_ENV=production node server.js",
     "dev:local": "cross-env NODE_ENV=development node server.js"
   },
