--- a/backend-meltt/services/academicService/package.json
+++ b/backend-meltt/services/academicService/package.json
@@ -23,6 +23,7 @@
     "body-parser": "^1.20.2",
     "canvas": "^3.1.0",
     "cors": "^2.8.5",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
