--- a/frontend-meltt/package.json
+++ b/frontend-meltt/package.json
@@ -30,7 +30,7 @@
     "pdf-lib": "^1.17.1",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
-    "react-big-calendar": "^1.17.1",
+    "react-big-calendar": "^1.18.0",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.9",
     "react-hot-toast": "^2.4.1",
@@ -46,6 +46,7 @@
     "@types/node": "^22.5.4",
     "@types/react": "^18.3.3",
     "@types/react-beautiful-dnd": "^13.1.8",
+    "@types/react-big-calendar": "^1.16.1",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.20",
