--- a/frontend-meltt/package.json
+++ b/frontend-meltt/package.json
@@ -19,6 +19,7 @@
     "@react-pdf/renderer": "^4.0.0",
     "@types/react-input-mask": "^3.0.2",
     "axios": "^1.7.7",
+    "cpf-cnpj-validator": "^1.0.3",
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.13",
     "formik": "^2.4.6",
