--- a/frontend-meltt/package.json
+++ b/frontend-meltt/package.json
@@ -11,14 +11,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "^11.13.3",
-    "@emotion/styled": "^11.13.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@mui/lab": "^6.0.0-beta.10",
-    "@mui/material": "^6.0.0",
-    "@mui/x-date-pickers": "^7.26.0",
+    "@mui/material": "^6.4.7",
+    "@mui/x-date-pickers": "^7.27.3",
     "@react-pdf/renderer": "^4.0.0",
     "@types/react-input-mask": "^3.0.2",
     "axios": "^1.7.7",
+    "cpf-cnpj-validator": "^1.0.3",
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.13",
     "formik": "^2.4.6",
