--- a/backend-meltt/services/authService/package.json
+++ b/backend-meltt/services/authService/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "cross-env NODE_ENV=development nodemon server/app.js",
     "start": "cross-env NODE_ENV=production node server/app.js",
-    "build": "cross-env NODE_ENV=production node server/app.js",
+    "build": "echo 'Building...'",
     "dev:local": "cross-env NODE_ENV=development node server/app.js"
   },
   "keywords": [],
