--- a/frontend-meltt/package.json
+++ b/frontend-meltt/package.json
@@ -19,7 +19,8 @@
     "@fullcalendar/timegrid": "^6.1.15",
     "@mui/icons-material": "^6.4.1",
     "@mui/lab": "^6.0.0-beta.30",
-    "@mui/material": "^6.4.7",
+    "@mui/material": "^6.4.11",
+    "@mui/x-date-pickers": "^8.4.0",
     "@react-pdf/renderer": "^4.0.0",
     "@types/react-input-mask": "^3.0.2",
     "axios": "^1.8.3",
